--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -1,32 +1,32 @@
 [technology-name]
-compression = Basic item compression
+compression=Basic item compression
 
 [technology-description]
-compression = Sudden advances in technology allow you to compress and pack items in a more efficient manner.
+compression=Sudden advances in technology allow you to compress and pack items in a more efficient manner.
 
 [item-group-name]
-compressor-compress = Compression recipes
-compressor-uncompress = Uncompress recipes
+compressor-compress=Compression recipes
+compressor-uncompress=Uncompress recipes
 
 [item-group-description]
-compressor-compress = Contains the compression recipes.
+compressor-compress=Contains the compression recipes.
 
 [item-name]
-compressed-item = Compressed __1__
+compressed-item=Compressed __1__
 
 [item-description]
-compressed-item = A compressed stack of __1__.
+compressed-item=A compressed stack of __1__.
 
 [recipe-name]
-compress-item = Compress __1__
-uncompress-item = __1__
+compress-item=Compress __1__
+uncompress-item=__1__
 
 [recipe-description]
-compress-item = Compress a full stack of __1__ to take up less space.
-uncompress-item = Uncompress to receive a full stack of __1__.
+compress-item=Compress a full stack of __1__ to take up less space.
+uncompress-item=Uncompress to receive a full stack of __1__.
 
 [entity-name]
-auto-compressor = Automatic Compressor
+auto-compressor=Automatic Compressor
 
 [entity-description]
-auto-compressor = Automatically compresses items without selecting a recipe.
+auto-compressor=Automatically compresses items without selecting a recipe.
